<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="450dp"
        android:background="@android:color/holo_blue_light"
        android:contentDescription="@string/upload"
        app:srcCompat="@drawable/circle_cropped" />

    <TextView
        android:id="@+id/textViewFilePathLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/file_path"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/filePathView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_orange_light"
        android:text="@string/file_path"
        android:textSize="18sp" />

    <Button
        android:id="@+id/udActivityUploadButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/upload"
        android:textSize="18sp" />

    <Button
        android:id="@+id/udActivityDeleteButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/holo_blue_light"
        android:text="@string/delete"
        android:textSize="18sp" />

</LinearLayout>