<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/holo_blue_light"
    android:orientation="vertical"
    android:padding="10sp"
    android:paddingLeft="10sp"
    android:paddingTop="10sp"
    android:paddingRight="10sp"
    android:paddingBottom="10sp"
    tools:context=".AccountInfoActivity">

    <TextView
        android:id="@+id/textViewNumberOfUploadLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_launcher_background"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/number_upload"
        android:textColor="#F4F6FA"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewNumberOfUpload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/number_upload"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewNumberOfDownloadLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_launcher_background"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/number_downloads"
        android:textColor="#F2F4F8"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewNumberOfDownload"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/number_downloads"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewStorageUsedLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_launcher_background"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/storage_used"
        android:textColor="#F7F8FA"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewFilePathLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/storage_used"
        android:textColor="@android:color/black"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/textViewApproxCostLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/ic_launcher_background"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/approximate_cost"
        android:textColor="#F6F7FA"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <TextView
        android:id="@+id/textViewApproxCost"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/approximate_cost"
        android:textColor="#F50A0A0A"
        android:textSize="24sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/buttonResestDb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="140sp"
        android:layout_marginTop="100sp"
        android:layout_marginStart="140sp"
        android:background="@android:color/holo_orange_light"
        android:padding="10sp"
        android:paddingLeft="10sp"
        android:paddingTop="10sp"
        android:paddingRight="10sp"
        android:paddingBottom="10sp"
        android:text="@string/reset_db"
        android:textSize="24sp"
        android:visibility="visible" />

</LinearLayout>